小数点の連続を阻止

--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
        <div>
          <button onclick="num_click(this.innerHTML)">0</button>
          <button onclick="ope_click(this.innerHTML)">00</button>
-         <button onclick="num_click(this.innerHTML)">.</button>
+         <button onclick="ope_click(this.innerHTML)">.</button>
          <button onclick="ope_click(this.innerHTML)">/</button>
        </div>
        <button id="underButton" onclick="clear_click()">AC</button>
