--- a/index1.html
+++ b/index1.html
@@ -31,7 +31,7 @@
        </div>
        <div>
          <button onclick="num_click(this.innerHTML)">0</button>
-         <button onclick="ope_click(this.innerHTML)">00</button>
+         <button onclick="num_click(this.innerHTML)">00</button>
          <button onclick="ope_click(this.innerHTML)">.</button>
          <button onclick="ope_click(this.innerHTML)">/</button>
        </div>
